# surf-forecast

back/: .dockerignore  .sqlfluff  Cargo.toml  Dockerfile  Makefile.toml
back/.sqlx/: query-190fd14c4004f8233475258bf8dc3b440fcc8d081f5b62b5abe9729c59ae1ed8.json
back/internal/: Cargo.toml
back/internal/src/: lib.rs
back/internal/src/api/: api.rs  api_success.rs  jwt.rs  mod.rs
back/internal/src/async/: mod.rs
back/internal/src/cache/: mod.rs  port.rs  redis.rs
back/internal/src/crypto/: mod.rs
back/internal/src/error/: api.rs
back/internal/src/serializer/: json.rs  mod.rs  port.rs
back/spot_server/: .env  Cargo.toml
back/spot_server/lib/domain/port/: forecast_repository.rs  mod.rs  spot_repository.rs
back/spot_server/lib/domain/service/: mod.rs  spot_service.rs
back/spot_server/lib/domain/type/: mod.rs  spot.rs
back/spot_server/lib/domain/type/storm_glass/: mod.rs  tide_forecast.rs  weather_forecast.rs
back/spot_server/lib/inbound/: api.rs  env.rs  mod.rs
back/spot_server/lib/inbound/handlers/: spot.rs
back/spot_server/lib/outbound/: api_key.rs  http_repository.rs  mod.rs  spot_postgres_repository.rs  storm_glass_repository.rs
back/spot_server/migrations/: 20250124065342_spot.up.sql  20250124071715_spot_insert.down.sql  20250124071715_spot_insert.up.sql  insert.sql
back/spot_server/tests/: get_spots.rs
back/test_lib/: Cargo.toml
back/test_lib/src/: lib.rs
back/user-server/: .env  Cargo.toml  Dockerfile
back/user-server/lib/: lib.rs
back/user-server/lib/domain/port/: user_repository.rs
back/user-server/lib/domain/service/: user_service.rs
back/user-server/lib/domain/type/: user.rs
back/user-server/lib/inbound/: api.rs  env.rs  mod.rs
back/user-server/lib/inbound/handlers/: user.rs
back/user-server/lib/outbound/: mod.rs  user_postgres_repository.rs
back/user-server/migrations/: 20250115192638_users.up.sql
back/user-server/queries/user/: insert.sql
back/user-server/tests/: authenticate.rs  create_user.rs
back/user-server/tests/common/: mod.rs
back/user_server/: .env  Cargo.toml  Makefile.toml
back/user_server/.sqlx/: query-07fef511b0dae8dcb31eac4d6cd71344e97ee023044cea5a70fed989826e04db.json  query-502ffcc992f8612bf4f534366f8a16babe16a290293a279cd136a285ce251b81.json
back/user_server/lib/: lib.rs
back/user_server/lib/domain/: mod.rs
back/user_server/lib/domain/port/: user_repository.rs
back/user_server/lib/domain/service/: user_service.rs
back/user_server/lib/domain/type/: user.rs
back/user_server/lib/inbound/: api.rs  env.rs
back/user_server/lib/inbound/handlers/: user.rs
back/user_server/lib/outbound/: postgres_repository.rs  user_postgres_repository.rs
back/user_server/queries/user/: get_all.sql  get_by.sql
back/user_server/tests/: authenticate.rs  create_user.rs
back/user_server/tests/common/: mod.rs
react-app/: bun.lockb  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
react-app/src/: App.tsx  i18n.ts  main.tsx
react-app/src/api/: user.ts
react-app/src/components/access-page/: index.tsx
react-app/src/components/ui/: dialog.tsx  drawer.tsx  form.tsx  index.ts  page.tsx  text-input.tsx  text.tsx  toaster-fn.ts  toaster.tsx
react-app/src/components/ui/map/: index.tsx
react-app/src/components/user/: index.ts  login-form.tsx  type.ts  user-form.tsx  user-page.tsx
react-app/src/translations/: en.json  fr.json
react-app/src/types/: user.type.ts
react-app/tests/: access-page.spec.ts
react-app/tests/fixtures/: user.ts
