[workspace]
members = [ "internal","user-server"]

[workspace.dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net", "tokio-macros", "test-util"] }
tower-http = { version = "0.6.2", features = ["trace", "compression-br"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
testcontainers = "0.23.1"
internal = { path = "./internal" }
futures = "0.3.31"
uuid = { version = "1.12.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["postgres", "macros", "migrate","runtime-tokio","uuid","chrono","tls-native-tls"] }
[workspace.lints.rust]
unsafe_code = "forbid"
