[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = {workspace = true}
axum = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber ={ workspace = true }
serde_json = { workspace = true }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
[lints]
workspace = true
