[package]
name = "spot_server"
version = "0.1.0"
edition = "2021"

[lib]
name="spot_server"
path="lib/lib.rs"
[[bin]]
name="spot_server"
path="bin/main.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true  }
dotenvy = { workspace = true  }
futures = { workspace = true  }
serde = { workspace = true  }
serde_json = { workspace = true  }
thiserror = { workspace = true  }
tokio = { workspace = true  }
tower-http = { workspace = true  }
tower = { workspace = true }
tracing = { workspace = true  }
tracing-subscriber = { workspace = true  }
internal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fake = "3.1.0"
sqlx = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
[dev-dependencies]
test_lib = { path = "../test_lib" }
testcontainers.workspace = true
http-body-util = "0.1.0"
testcontainers-modules ={version = "0.11.5", features = ["postgres"]}
[lints]
workspace = true
