[package]
name = "test_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
testcontainers.workspace = true
http-body-util = "0.1.0"
testcontainers-modules ={version = "0.11.5", features = ["postgres"]}
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tower = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
internal = { workspace = true }
[lints]
workspace = true
